--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="ranges">
             <div class="range-container">
                 <label for="range">character length</label>
                 <input value="0" type="range" id="range" min="5" max="20">
