--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="range-container">
                 <label for="range">character length</label>
                 <input value="0" type="range" id="range" min="5" max="20">
+                <span class="char-length">0</span>
             </div>
             <div class="checkbox-container">
                 <div>
@@ -41,8 +42,8 @@
                     <label for="symbol">include symbol</label>
                 </div>
             </div>
+            <button class="generate-password">generate password</button>
         </div>
-        <button>generate password</button>
     </div>
 </body>
 </html>
