feat: add boxicon cdn link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>password-generator</title>
     <link rel="stylesheet" href="./style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script defer src="./main.js"></script>
 </head>
 <body>
@@ -14,7 +15,7 @@
         <div class="password-container">
             <h1 class="password">password</h1>
             <div class="copy-btn">
-                <button>📋</button>
+                <button><i class='bx  bx-copy'></i> </i></button>
             </div>
         </div>
 
