remove console log

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
         <div class="password-container">
             <h1 class="password">password</h1>
-            <div class="copy-btn">
-                <button><i class='bx  bx-copy'></i> </i></button>
-            </div>
+            <button class="copy-btn">
+                <i class='bx  bx-copy'></i>
+            </button>
         </div>
 
         <div class="ranges">
