refactor: copy only when password generate

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2 class="heading">password generator</h2>
 
         <div class="password-container">
-            <h1 class="password">password</h1>
+            <h1 class="password">Password...</h1>
             <button class="copy-btn">
                 <i class='bx  bx-copy'></i>
             </button>
